[package]
name = "s01c03"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4"
whatlang = "0.16"
s01c01 = { path = "../s01c01", version = "0.1" }
s01c02 = { path = "../s01c02", version = "0.1" }
